fix posts.py and swagger
